--- a/config/config.yml
+++ b/config/config.yml
@@ -31,6 +31,14 @@ server:
     - type: http
       port: 8081
   registerDefaultExceptionMappers: false
+  requestLog:
+    appenders:
+      - type: file
+        currentLogFilename: /var/log/access.log
+        threshold: ALL
+        archive: true
+        archivedLogFilenamePattern: /var/log/access.%d.log.gz
+        archivedFileCount: 14
 
 assets:
   overrides:
@@ -44,14 +52,21 @@ logging:
 
   # Logger-specific levels.
   loggers:
-
+    "org.apache.http.wire": DEBUG
     # Sets the level for 'io.budgetapp' to DEBUG.
     io.budgetapp: DEBUG
-
-    org.hibernate.SQL: ALL
+    # org.hibernate.SQL: ALL
 
   appenders:
     - type: console
+    - type: file
+      currentLogFilename: /var/log/application.log
+      threshold: ALL
+      archive: true
+      archivedLogFilenamePattern: /var/log/application-%d.log
+      archivedFileCount: 5
+      timeZone: UTC
+
 
 categories:
   - name: Income
